syntax = "proto3";
package com.bulletinboard;
option java_multiple_files = true;

// Implement ProtoFile Here

message Post {
	string title = 1;
	string body = 2;
}

message addPostRequest{
	string title = 1;
	string body = 2;
}

message addPostResponse{
	string response = 1;
}

message getPostsRequest {}

message getPostsResponse{
	repeated Post posts = 1;
}

message getPostRequest {
	string title = 1;
}

message getPostResponse {
	bool exists = 1;
	Post post = 2;
}

message deletePostRequest {
	string title = 1;
}

message deletePostResponse {
	bool result = 1;
}

service BulletinBoard{
	rpc addPost(addPostRequest) returns (addPostResponse);
	rpc getPosts(getPostsRequest) returns (getPostsResponse);
	rpc getPost(getPostRequest) returns (getPostResponse);
	rpc deletePost(deletePostRequest) returns (deletePostResponse);
}